# micro_P7

./: .gitignore  CMakeLists.txt
P7lib/: CMakeLists.txt
P7lib/Headers/: GTypes.h  P7_Client.h  P7_Cproxy.h  P7_Extensions.h  P7_Telemetry.h  P7_Trace.h  P7_Version.h
P7lib/Shared/: AList.h  CRC32.h  DnsResolver.h  IConsole.h  IFile.h  IJournal.h  IMEvent.h  IPerformanceInfo.h  ISignal.h  Length.h  Lock.h  Predicate.h  QStringHelper.h  RBTree.h  RingBuffer.h  SharedLib.h  Ticks.h  UDP_NB.h  UTF.h  WString.h
P7lib/Singleton/: CMakeLists.txt  misc.h  p7_logger.cpp  p7_logger.h
P7lib/Sources/: CMakeLists.txt  CRC32.cpp  ClBaical.cpp  ClBaical.h  ClFile.cpp  ClFile.h  ClNull.cpp  ClNull.h  ClText.cpp  ClText.h  ClTextConsole.h  ClTextFile.h  ClTextSink.h  ClTextSyslog.h  Client.cpp  Client.h  Common.h  CommonClient.h  Formatter.h  PacketsPool.h  Proxy.cpp  TPackets.h  Telemetry.cpp  Telemetry.h  Trace.cpp  Trace.h  resource.h  targetver.h
uP7example/: CMakeLists.txt  cpu.cpp  cpu.h  error.cpp  fifo.h  host.cpp  readme.txt  uP7prePreProcess.bat
uP7example/uP7preProcessor/: uP7IDs.h  uP7Preprocessor.xml  uP7example.up7  uP7preprocessed.h
uP7lib/Headers/: uP7.h  uP7helpers.h  uP7protocol.h  uP7version.h
uP7lib/Source/: CMakeLists.txt  uP7.c  uP7context.h  uP7hash.h
uP7preProcessor/: Keccak.h  P7preProcessor  crc7.h  uP7preCommon.h  uP7preConfig.h  uP7preDefines.h  uP7preFile.cpp  uP7preFile.h  uP7preFunction.cpp  uP7preFunction.h  uP7preManager.cpp  uP7preManager.h  uP7preProcessor.cpp  uP7preTools.h  uP7sessionFile.cpp  uP7sessionFile.h
uP7preProcessor/cfg/: BNode.cpp  BNode.h  INode.h  pugiconfig.hpp  pugixml.cpp  pugixml.hpp
uP7proxyLib/Headers/: uP7proxyApi.h
uP7proxyLib/Source/: CMakeLists.txt  uP7Fifo.cpp  uP7Fifo.h  uP7chunks.h  uP7common.h  uP7proxy.cpp  uP7proxy.h  uP7proxyClient.h  uP7proxyCpu.cpp  uP7proxyCpu.h  uP7proxyLinearPool.h  uP7proxyPreprocessor.h  uP7proxyStream.cpp  uP7proxyStream.h  uP7proxyTelemetry.cpp  uP7proxyTelemetry.h  uP7proxyTrace.cpp  uP7proxyTrace.h
uP7test/: CMakeLists.txt  common.h  main.cpp  t1CreateDestroy.cpp  t1CreateDestroy.h  t2Format.cpp  t2Format.h  t3Performance.cpp  t3Performance.h  t4MultiCore.cpp  t4MultiCore.h  t5Time.cpp  t5Time.h  t6Resync.cpp  t6Resync.h  uP7prePreProcess.bat
uP7test/uP7preProcessor/: uP7IDs.h  uP7Testx86.xml  uP7preprocessed.h  uP7test.up7
